# backend/docs/swagger.yaml
@@ -184,6 +184,34 @@ paths:
       summary: Allows the user to log out from the service.
       tags:
       - Authorization
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: Allows new users to create a new account.
+      parameters:
+      - description: name and password values in models.User
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Allows new users to create a new account.
+      tags:
+      - Authorization
   /rent/:id:
     patch:
       consumes:
